fix bugs on safari and add favicon.ico

--- a/css/main.css
+++ b/css/main.css
@@ -180,10 +180,11 @@
 .image-title {
     width: 100%;
     text-align: center;
-    padding: 50px;
+    padding: 50px 0;
     background: rgba(255, 243,270, 0.6);
     position: absolute;
     bottom: 2vh;
+    left: 0;
 }
 
 .hidden {
